  03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-host-deploy-9999.ebuild:
  setup layout